[package]
name = "paco"
version = "0.1.0"
edition = "2021"
authors = ["William Bradley"]
license = "MIT"
description = "A simple parser combinator library."
homepage = "https://github.com/wbbradley/paco"
# documentation =
repository = "https://github.com/wbbradley/paco"
readme = "README.md"
keywords = ["lexer", "parser", "combinator", "parser-combinator", "recursive-descent"]
include = [
  "src/paco.rs",
  "Cargo.toml",
]

[dependencies]
