[package]
name = "paco"
version = "0.1.3"
edition = "2021"
authors = ["William Bradley"]
license = "MIT"
description = "A simple parser combinator library."
homepage = "https://github.com/wbbradley/paco"
# documentation =
repository = "https://github.com/wbbradley/paco"
readme = "README.md"
keywords = ["lexer", "parser", "combinator", "parser-combinator", "recursive-descent"]

[dependencies]

[lib]
name = "paco"
path = "src/paco.rs"
